EVA-151 feat: Se aplica el estilo nuevo a los templates relacionados con el inicio de sesión de proveedores.

--- a/Administracion/templates/Administracion/Autenticacion/_common/base_autenticacion.html
+++ b/Administracion/templates/Administracion/Autenticacion/_common/base_autenticacion.html
@@ -23,6 +23,7 @@
         <!-- Optional: page related CSS-->
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
+        <link rel="stylesheet" media="screen, print" href="{% static 'Administracion/css/Autenticacion/generales.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css'%}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
