--- a/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
@@ -6,57 +6,52 @@
 
 {% block main %}
 
-    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg' %}') no-repeat center bottom fixed; background-size: cover ">
+    <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/custom/fondo.png' %}') no-repeat center bottom fixed; background-size: cover ">
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
             <div class="row">
-                <div class="col col-md-6 col-lg-7 hidden-sm-down">
-                    <h1 class="fs-xxl fw-500 mt-4 text-white">
-                        <FONT SIZE=7>EVA</FONT>
-                        <small class="h3 fw-300 mt-3 mb-5 text-white opacity-60">
-                            Espacio Virtual de Arios
-                        </small>
-                    </h1>
-                    <br><br><br>
-                     <img src="{% static 'EVA/Plantilla/img/logo-transparente.png' %}" style="width: 100%; opacity: 20%">
-                </div>
                 <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 ml-auto">
-                    <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
-                        Secure login
-                    </h1>
                     <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
-                        <div style="display: flex; justify-content: center;">
-                            <img src="{% static 'EVA/Plantilla/img/logo-arios-tr.png' %}" style="width: 80%">
-                        </div>
-                        <br>
-                        <form action="{% url 'Administracion:iniciar-sesion' %}" id="iniciar-sesion-form" method="post" class="needs-validation" novalidate>
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <label class="form-label" for="usuario">Usuario</label>
-                                <input type="text" id="username" name="username" class="form-control" placeholder="Digite su usuario"  required>
-                                <div class="invalid-feedback">Por favor digite su usuario</div>
+                        <div class="card p-4 mt-6 rounded-plus bg-faded-white" style="justify-content: center">
+                            <div style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-eva.svg' %}">
                             </div>
-                            <div class="form-group">
-                                <label class="form-label" for="contraseña">Contraseña</label>
-                                <input type="password" id="password" name="password" class="form-control" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
-                                <div class="invalid-feedback">Por favor digite su contraseña</div>
+                            <br>
+                            <div style="display: flex; justify-content: center;">
+                                <h2 class="titulo-autenticacion">Inicio de Sesión</h2>
                             </div>
-                            <div class="form-group text-left" style="align-items: center">
-                                <div class="row">
-                                     <div class="col-lg-6">
-                                         <a href="{% url 'Administracion:olvido-contrasena' %}">¿Olvidó su contraseña?</a>
-                                     </div>
-                                    <div class="col-lg-6">
-                                        <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}"> Soy un proveedor </a>
+                            <form action="{% url 'Administracion:iniciar-sesion' %}" id="iniciar-sesion-form" method="post" class="needs-validation" novalidate>
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label class="form-label" for="usuario">Usuario</label>
+                                    <input type="text" id="username" name="username" class="form-control" placeholder="Digite su usuario"  required>
+                                    <div class="invalid-feedback">Por favor digite su usuario</div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="form-label" for="contraseña">Contraseña</label>
+                                    <input type="password" id="password" name="password" class="form-control" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
+                                    <div class="invalid-feedback">Por favor digite su contraseña</div>
+                                </div>
+                                <div class="form-group text-left" style="align-items: center">
+                                    <div class="row">
+                                         <div class="col-6">
+                                             <a href="{% url 'Administracion:olvido-contrasena' %}">¿Olvidó su contraseña?</a>
+                                         </div>
+                                        <div class="col-6">
+                                            <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}"> Soy un proveedor </a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <input id="datos_token" name="datos" hidden value="{{ datos }}">
-                            <div class="row no-gutters">
-                                <div class="col-lg-6 pl-lg-1 my-2">
-                                    <button id="js-login-btn" type="submit" class="btn btn-danger btn-block ">Iniciar sesión</button>
+                                <input id="datos_token" name="datos" hidden value="{{ datos }}">
+                                <div class="row no-gutters">
+                                    <div class="col-lg-6 pl-lg-1 my-2">
+                                        <button id="js-login-btn" type="submit" class="btn btn-primary btn-block ">Iniciar sesión</button>
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
+                        <div class="mt-4" style="display: flex; justify-content: center;">
+                                <img src="{% static 'EVA/Plantilla/img/custom/logo-arios-blanco.svg' %}" style="width: 50%">
+                        </div>
                     </div>
                 </div>
             </div>
