EVA-151 feat: Se cambia le logo mostrado en la barra de navegación lateral por el logo de EVA.

--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -43,9 +43,9 @@
                 <aside class="page-sidebar">
                     <div class="page-logo">
                         <a href="#" class="page-logo-link press-scale-down d-flex align-items-center position-relative" data-toggle="modal" data-target="#modal-shortcut">
-                            <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
-                            <span class="page-logo-text mr-1">EVA</span>
-                            <span class="position-absolute text-white opacity-50 small pos-top pos-right mr-2 mt-n2"></span>
+                            <img src="{% static 'EVA/Plantilla/img/custom/logo-eva-rd.svg' %}" alt="EVA" aria-roledescription="logo" style="height: 50px; width: auto">
+                            <img src="{% static 'EVA/Plantilla/img/custom/logo-texto.svg' %}" alt="EVA" aria-roledescription="logo" style="height: 50px; width: auto" class="ml-2">
+                            <span class="page-logo-text "></span>
                             <i class="fal fa-angle-down d-inline-block ml-1 fs-lg color-primary-300"></i>
                         </a>
                     </div>
