--- a/EVA/templates/EVA/index.html
+++ b/EVA/templates/EVA/index.html
@@ -1,4 +1,5 @@
 {% extends 'EVA/_common/base.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -11,14 +12,21 @@
             <h1 class="subheader-title">
                 <i class='subheader-icon fal fa-'></i> Bienvenido a <span class='fw-300'>Espacio Virtual de ARIOS</span>
                 <small>
-
                 </small>
             </h1>
             <div class="subheader-block">
 
             </div>
         </div>
-        <input id="datos_token" hidden value="{{ datos }}">
+        <div class="container h-100" style="display: flex; justify-content: center;">
+{#            <div class="row">#}
+{#                <div class="col-xl-12">#}
+{#                    <div style="display: flex; justify-content: center;">#}
+                        <img src="{% static 'EVA/Plantilla/img/custom/logo-eva-rd.svg' %}" style="width: 50%; height: auto"/>
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+        </div>
     {% endblock %}
     </body>
 </html>
