--- a/Administracion/static/Administracion/css/Autenticacion/generales.css
+++ b/Administracion/static/Administracion/css/Autenticacion/generales.css
@@ -18,7 +18,7 @@ input:-webkit-autofill {
     -webkit-text-fill-color: #fff !important;
 }
 .form-control::-webkit-input-placeholder {
-    color:#fff;
+    color: #d5d5d5;
 }
 
 .form-label {
