EVA-154 Feat: Se agrega la clase para darle el formato de color a las tablas

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -43,7 +43,7 @@
                                     <div class="panel-body">
                                         <div class="table-responsive">
                                             <table class="table table-bordered w-100" id="dataTableConsecutivos">
-                                                <thead>
+                                                <thead class="bg-primary-600">
                                                     <tr>
                                                         <th>Código</th>
                                                         <th>Fecha</th>
