--- a/Administracion/templates/Administracion/GruposPermisos/index.html
+++ b/Administracion/templates/Administracion/GruposPermisos/index.html
@@ -32,7 +32,7 @@
                                         <div class="panel-body">
                                             <div class="table-responsive">
                                                 <table class="table table-bordered w-100" id="dataTable">
-                                                    <thead>
+                                                    <thead class="bg-primary-600">
                                                         <tr>
                                                             <th>Nombre</th>
                                                             <th>Descripción</th>
