--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
@@ -36,7 +36,7 @@
                                     <div class="panel-body">
                                         <div class="table-responsive">
                                             <table class="table table-bordered w-100" id="dataTable">
-                                                <thead>
+                                                <thead class="bg-primary-600">
                                                     <tr>
                                                         <th>Proceso</th>
                                                         <th>Descipción</th>
