--- a/Proyectos/templates/Proyectos/Contrato/index.html
+++ b/Proyectos/templates/Proyectos/Contrato/index.html
@@ -34,7 +34,7 @@
                                 <div class="panel-body">
                                     <div class="table-responsive">
                                         <table class="table table-bordered w-100" id="dataTable">
-                                            <thead>
+                                            <thead class="bg-primary-600">
                                                 <tr>
                                                     <th>Cliente</th>
                                                     <th>Número de contrato</th>
