--- a/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Entidades_CAFE/index.html
@@ -46,7 +46,7 @@
                                              </div>
                                             <div class="table-responsive">
                                                 <table class="table table-bordered w-100" id="dataTable">
-                                                    <thead>
+                                                    <thead class="bg-primary-600">
                                                         <tr>
                                                             <th>Nombre entidad</th>
                                                             <th>Dirección</th>
