EVA-151 feat: Se cambia el color de los iconos de la barr de accesos directos (módulos de EVA) según la revisión realizada con Comercial y Profesional de Actualización y Desarrollo.

--- a/EVA/templates/EVA/_common/shortcuts.html
+++ b/EVA/templates/EVA/_common/shortcuts.html
@@ -8,8 +8,8 @@
                         <a href="/" class="app-list-item text-white border-0 m-0">
                             <div class="icon-stack">
                                 <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                <i class="fal fa-home icon-stack-1x opacity-100 color-white"></i>
+                                <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                <i class="fal fa-home icon-stack-1x opacity-100 color-info-700"></i>
                             </div>
                             <span class="app-list-name">
                                 Home
@@ -22,8 +22,8 @@
                             <a href="{% url 'Administracion:index' %}" class="app-list-item text-white border-0 m-0">
                                 <div class="icon-stack">
                                     <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                    <i class="fal fa-cog icon-stack-1x opacity-100 color-white"></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                    <i class="fal fa-cog icon-stack-1x opacity-100 color-info-700"></i>
                                 </div>
                                 <span class="app-list-name">
                                     Administración
@@ -36,8 +36,8 @@
                             <a href="{% url 'Proyectos:index' %}" class="app-list-item text-white border-0 m-0">
                                 <div class="icon-stack">
                                     <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                    <i class="fal fa-building icon-stack-1x opacity-100 color-white"></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                    <i class="fal fa-building icon-stack-1x opacity-100 color-info-700"></i>
                                 </div>
                                 <span class="app-list-name">
                                     Proyectos
@@ -50,8 +50,8 @@
                             <a href="{% url 'TalentoHumano:index' %}" class="app-list-item text-white border-0 m-0">
                                 <div class="icon-stack">
                                     <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                    <i class="fal fa-users icon-stack-1x opacity-100 color-white"></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                    <i class="fal fa-users icon-stack-1x opacity-100 color-info-700"></i>
                                 </div>
                                 <span class="app-list-name">
                                     Talento Humano
@@ -64,8 +64,8 @@
                             <a href="{% url 'SGI:index' %}" class="app-list-item text-white border-0 m-0">
                                 <div class="icon-stack">
                                     <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                    <i class="fal fa-dot-circle icon-stack-1x opacity-100 color-white"></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                    <i class="fal fa-dot-circle icon-stack-1x opacity-100 color-info-700"></i>
                                 </div>
                                 <span class="app-list-name">
                                     SGI
@@ -78,8 +78,8 @@
                             <a href="{% url 'Financiero:index' %}" class="app-list-item text-white border-0 m-0">
                                 <div class="icon-stack">
                                     <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                    <i class="fal fa-usd-square icon-stack-1x opacity-100 color-white"></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                    <i class="fal fa-usd-square icon-stack-1x opacity-100 color-info-700"></i>
                                 </div>
                                 <span class="app-list-name">
                                     Financiero
@@ -92,8 +92,8 @@
                             <a href="{% url 'GestionDocumental:index' %}" class="app-list-item text-white border-0 m-0">
                                 <div class="icon-stack">
                                     <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                    <i class="fal fa-archive icon-stack-1x opacity-100 color-white"></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                    <i class="fal fa-archive icon-stack-1x opacity-100 color-info-700"></i>
                                 </div>
                                 <span class="app-list-name">
                                     Gestión<br>Documental
@@ -106,8 +106,8 @@
                             <a href="{% url 'Administracion:proveedor-index' %}" class="app-list-item text-white border-0 m-0">
                                 <div class="icon-stack">
                                     <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                    <i class="fal fa-archive icon-stack-1x opacity-100 color-white"></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-white "></i>
+                                    <i class="fal fa-archive icon-stack-1x opacity-100 color-info-700"></i>
                                 </div>
                                 <span class="app-list-name">
                                     Proveedores
