EVA-155 feat: Se realizan las modificaciones necesarias par que en agregar item en una factura el título sea opcional y la descripción sea obligatoria.

--- a/Financiero/templates/Financiero/Facturacion/_agregar_item_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_item_modal.html
@@ -16,13 +16,13 @@
 
                     <div class="form-row">
                         <div class="form-group col-12">
-                            {% input_general_tag 'titulo_item' texto_label="Ítem:" type="textarea" placeholder="Ingrese el ítem" required="" maxlength="250" mensaje_validacion="El ítem es requerido"%}
+                            {% input_general_tag 'titulo_item' texto_label="Título:" type="textarea" placeholder="(Opcional) Ingrese el título" maxlength="250"%}
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group col-12">
-                            {% input_general_tag 'descripcion_item' texto_label="Descripcion:" type="textarea" placeholder="(Opcional) Ingrese la descripción del item" maxlength="500" %}
+                            {% input_general_tag 'descripcion_item' texto_label="Descripcion:" type="textarea" placeholder="Ingrese la descripción del ítem" required="" maxlength="500" mensaje_validacion="El ítem es requerido" %}
                         </div>
                     </div>
 
