EVA-154 Feat: Se agregan modificaciones en los consecutivos Para mostrar la fecha y el usuario y ademas, definir el ancho de la columna

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -140,6 +140,10 @@ position: relative;
     text-align: center;
 }
 
+.min-w-100{
+    min-width: 100px;
+}
+
 .min-w-200{
     min-width: 200px;
 }
