EVA-154 Feat: Se crea el campo de usuario que crea en consecutivos de contrato Adicional, se agrega a la vista y el template.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -71,7 +71,7 @@
                                                                     {{ consecutivo.fecha_final | date:'Y-m-d'}}
                                                                 {% else %} N/A {% endif %}</td>
                                                             <td>{{ consecutivo.tipo_contrato }}</td>
-                                                            <td>{{ consecutivo.usuario.get_full_name }}</td>
+                                                            <td>{{ consecutivo.usuario_crea.get_full_name }}</td>
                                                         </tr>
                                                     {% endfor %}
                                                 </tbody>
