--- a/Administracion/templates/Administracion/Tercero/Proveedor/index.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/index.html
@@ -78,6 +78,7 @@
                                     <div class="panel-group">
                                         <div class="panel-body">
                                             <div class="table-responsive">
+                                                {% include 'EVA/_common/_busqueda_paginacion.html' %}
                                                 <table class="table table-bordered w-100" id="dataTable">
                                                     <thead class="bg-primary-600">
                                                         <tr>
@@ -123,6 +124,7 @@
                                                         {% endfor %}
                                                     </tbody>
                                                 </table>
+                                                {% include 'EVA/_common/_paginacion.html' with datos=proveedores_pro_serv busqueda_avanzada=valor_subproducto_subservicio %}
                                             </div>
                                         </div>
                                         <div class="card-footer small text-muted">Actualizado: {{ fecha }}</div>
@@ -143,9 +145,5 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/productosServicios.js' %}"></script>
-    <script>
-        $(document).ready(function() {
-            iniciarTablaExportar([0, 1, 2, 3, 4, 5]);
-        });
-    </script>
+    <script src="{% static 'EVA/Plantilla/js/custom/controlBusquedaPaginacion.js' %}"></script>
 {% endblock %}
