EVA-154 Feat: Se agrega la paginación del lado del servidor en consecutivos de oficios.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoContratos/index.html
@@ -77,7 +77,7 @@
                                                     {% endfor %}
                                                 </tbody>
                                             </table>
-                                            {% include 'EVA/_common/_paginacion.html' with datos=consecutivos buscar=buscar %}
+                                            {% include 'EVA/_common/_paginacion.html' with datos=consecutivos %}
                                         </div>
                                     </div>
                                     <div class="card-footer small text-muted">Actualizado: {{ fecha }}</div>
